# X-follow-clusters

./: .env.example  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: MILESTONES.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: airport_codes.yaml  seed_accounts.yaml  seed_geographies.yaml  seed_topics.example.yaml
docs/: auth-alternatives.md
scripts/: update_airport_codes.py
skills/: eval-geo-clustering.md
skills/eval-geo-clustering/: SKILL.md
src/: __main__.py
src/auth/: __init__.py  x_auth.py
src/cluster/: __init__.py  embed.py  embedding_cache.py  geo_cluster.py  geo_preprocess.py  name.py  test_cluster.py
src/enrich/: __init__.py  api_client.py  enrich.py  populate_tweets.py  rate_limiter.py  test_enrich.py  tweet_cache.py
src/list/: __init__.py  cli.py  creator.py  exporter.py
src/parse/: __init__.py  cli.py  follower_parser.py  following_parser.py
src/review/: __init__.py  actions.py  automation.py  batch.py  cli.py  histogram.py  merge_split.py  metrics.py  registry.py  table.py
src/scrape/: __init__.py  __main__.py  entities.py  google_lookup.py  link_follower.py  parser.py  scraper.py
tests/: conftest.py  test_3scrape.py  test_clustering.py  test_embedding_cache.py  test_exporter.py  test_follower_parser.py  test_list_creator.py  test_review_registry.py  test_tweet_cache.py  test_x_auth.py
(+120 files in other folders)
